webook/k8s-webook-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            # 数据存储在容器内的 /mysql 目录，该目录通过 PVC 绑定到外部存储
            - mountPath: /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      port: 13306
      targetPort: 3306
  type: LoadBalancer
