webook/k8s-webook-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-redis
spec:
  selector:
    matchLabels:
      app: webook-redis
  template:
    metadata:
      labels:
        app: webook-redis
    spec:
      containers:
        - name: webook-redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 16379
      targetPort: 6379
      # 不指定 nodePort，Kubernetes 会在默认的范围内（30000-32767）自动分配一个可用的端口
      # nodePort: 30000
  type: NodePort
