webook/k8s-webook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webook
  template:
    metadata:
      labels:
        app: webook
    spec:
      containers:
        - name: webook
          image: liupch6/webook:v0.0.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  selector:
    app: webook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
