webook/k8s-webook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
    # localhost 默认指代的是 localhost:80，因为 HTTP 协议的默认端口是 80， HTTPS 端口 443（如果启用了 TLS）
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webook
                port:
                  number: 81
